--- a/Runtime/SimulFactory.SFUnityUIExtensions.asmdef
+++ b/Runtime/SimulFactory.SFUnityUIExtensions.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "SimulFactory.SFUnityUIExtensions",
-    "rootNamespace": "",
+    "rootNamespace": "SimulFactory.SFUnityUIExtensions",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
